--- a/.github/workflows/test-library.yaml
+++ b/.github/workflows/test-library.yaml
@@ -2,12 +2,19 @@ name: Test R Library
 
 run-name: ${{ github.actor }} is testing R Library
 
-on: [push, pull_request]
-branches:
-  - 'main'
-  - 'setup-r-library'
-paths:
-  - '1-resources/r-library/'
+on:
+  push:
+    branches:
+      - 'main'
+      - 'setup-r-library'
+    paths:
+      - '1-resources/r-library/'
+  pull_request:
+    branches:
+      - 'main'
+      - 'setup-r-library'
+    paths:
+      - '1-resources/r-library/'
 
 jobs:
   test-r-library:
