Change run name of GitHub Action test-library.yaml

--- a/.github/workflows/test-library.yaml
+++ b/.github/workflows/test-library.yaml
@@ -1,6 +1,6 @@
 name: Test R Library
 
-run-name: ${{ github.actor }} is testing R Library
+run-name: ${{ github.actor }} triggered unit testing of the R Library
 
 on:
   push:
